fixed bug where footer was displaying white space under

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -176,6 +176,12 @@ body {
 }
 
 /* footer styling */
+
+footer{
+  position: absolute;
+  width: 100%;
+}
+
 .footer-copyright {
   background-color: var(--primary);
 }
